Implementation into the header version of the search box the functionality previously only found in the body page versions of the search.
This includes:
- searches made by manipulating the hash strings
- GA strings determinable on the page level
- optional communication between the React root and the header app, so that the header reflects searches as they happen, and can display search debugging results.

The communication is implemented via a global store, with the header listening for changes to that store.

Still to come is the styling of the now updated header, and the removal of the old search boxes.

--- a/server/templates/place.html
+++ b/server/templates/place.html
@@ -41,7 +41,7 @@ limitations under the License.
 {% endblock %}
 
 {% block content %}
-<div id="body" class="container-fluid">
+<div id="body" class="container-fluid">abc
   <div id="nl-search-bar"></div>
   <div id="body-row" class="row">
     <div id="sidebar-outer" class="col-md-3x col-xl-2 order-last order-xl-0">
