--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -119,6 +119,8 @@
   data-show-disaster="{{ SHOW_DISASTER }}"
   data-show-sustainability="{{ SHOW_SUSTAINABILITY }}"
   data-hide-header-search-bar="{{ is_hide_header_search_bar }}"
+  data-ga-value-search-source="{{ ga_value_search_source }}"
+  data-search-bar-hash-mode="{{ is_search_bar_hash_mode }}"
   data-hide-full-footer="{{ is_hide_full_footer }}"
   data-hide-sub-footer="{{ is_hide_sub_footer }}"
   data-subfooter-extra="{{ subfooter_extra_content|safe }}"
@@ -129,6 +131,7 @@
 {% include 'metadata/labels.html' %}
 {% include 'metadata/routes.html' %}
 
+<script src={{url_for('static', filename='headerStore.js', t=config['VERSION'])}} async></script>
 <script src={{url_for('static', filename='base.js', t=config['VERSION'])}} async></script>
 
 <div id="main">
