--- a/server/templates/custom_dc/custom/base.html
+++ b/server/templates/custom_dc/custom/base.html
@@ -1,21 +1,19 @@
 {#-
- Copyright 2023 Google LLC
+  Copyright 2025 Google LLC
 
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-      http://www.apache.org/licenses/LICENSE-2.0
+  http://www.apache.org/licenses/LICENSE-2.0
 
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
--#}
-
-
-{#-
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  -#}
+  {#-
   Required variables:
   title: page title
   main_id: DOM Element ID for the main content block
@@ -24,15 +22,18 @@
   Optional variables:
   locale: string, value for html lang attr
   is_hide_header_search_bar: boolean, if true, the header will not contain a search bar. Default false.
-  subpage_title: string, if specified, will be displayed in the header next to Data Commons
+  is_hide_full_footer: boolean, if true, hides the full expanded footer. Default false
+  is_hide_sub_footer: boolean, if true, hides the sub footer. Default false
+  locale: string, value for html lang attr
+  brand_logo_light: boolean, if true, use the light colored logo in the footer. Default false which uses the dark colored logo.
+  manual_ga_pageview: boolean, if true, will set the Google Analytics config to
+      stop pageview tracking, relying on the app to do all pageview tracking.
 
   Blocks to override:
   head - additional head elements
   content - main page content
 -#}
 <!DOCTYPE html>
-{#- Hide the header search bar for custom DC pages. -#}
-{% set is_hide_header_search_bar = 'true' %}
 
 <html lang={{ locale }} id={{ page_id }}>
 
@@ -52,105 +53,107 @@
     });
   </script>
   {% endif %}
-  <script>
-    globalThis.FEATURE_FLAGS = {{ config['FEATURE_FLAGS'] | tojson }};
-  </script>
 
   <title>{{ title }} - Custom Data Commons</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;600&family=Roboto&display=swap"
+
+  {% block meta %}
+  <meta property="og:type" content="website" />
+  {% if title == "Home" %}
+  <meta property="og:title" content="Data Commons" />
+  {% else %}
+  <meta property="og:title" content="{{ title }}{{' - ' if title else ''}}Data Commons" />
+  {% endif %}
+  <meta property="twitter:card" content="summary" />
+  <meta property="og:description" content="Data Commons aggregates and harmonizes global, open data, giving everyone the power to uncover insights with natural language questions" />
+  <meta property="og:image" content="https://datacommons.org/images/dc-logo.png" />
+  {% endblock %}
+
+  {% if config['LOCAL'] %}
+  <link rel="icon" href="/images/favicon-local.png" type="image/png">
+  {% else %}
+  <link rel="icon" href="/images/favicon.png" type="image/png">
+  {% endif %}
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500;700&family=Google+Sans+Text:wght@300;400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href={{url_for('static', filename='css/static.min.css', t=config['VERSION'])}}>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=block">
+  <link rel="stylesheet" href={{url_for('static', filename='css/core.min.css', t=config['VERSION'])}}>
   {% block head %}
   {% endblock %}
   {% if OVERRIDE_CSS_PATH %}
   <link href="{{ OVERRIDE_CSS_PATH }}" rel="stylesheet">
   {% endif %}
-  <script src={{url_for('static', filename='queryStore.js', t=config['VERSION'])}} async></script>
+  <script>
+    globalThis.isCustomDC = {{ config['CUSTOM']|int }};
+    globalThis.STAT_VAR_HIERARCHY_CONFIG = {{ config['STAT_VAR_HIERARCHY_CONFIG'] | tojson }};
+    globalThis.FEATURE_FLAGS = {{ config['FEATURE_FLAGS'] | tojson }};
+    globalThis.enableBQ = {{ config['ENABLE_BQ']|int }};
+  </script>
+  <script>
+    // This script is to allow embedding the website as an iframe and allow the
+    // parent to request the iframe's URL. This is used by the /dev/diff tool.
+    window.addEventListener('message', function(event) {
+      // The parent should send a postMessage event.
+      // MUST verify the origin to be autopush DC
+      if (event.origin === 'https://autopush.datacommons.org') {
+        // Send the iframe's URL back to the parent
+        if (event.data === 'Request URL') {
+          event.source.postMessage(
+            { type: 'URLResponse', url: window.location.href },
+            event.origin
+          );
+        }
+      }
+    });
+  </script>
 </head>
 
-<body>
-  {# Set page locale. #}
-  <div id="metadata-base" class="d-none" 
-    data-hide-header-search-bar="{{ is_hide_header_search_bar }}"
-    data-locale="{{ locale }}"
-  >
-  </div>
+<body {% if is_hide_header_search_bar %}class="no-header-search-bar"{% endif %}>
 
-  <div id="main">
-    <header id="main-header">
-      <nav class="navbar navbar-dark navbar-expand-lg col" id="main-nav">
-        <div class="container-fluid">
-          <div class="navbar-brand">
-            {% if LOGO_PATH %}
-            <div class="main-header-logo">
-                <a href="{{ url_for('static.homepage') }}">
-                  <img src="{{ LOGO_PATH }}" />
-                </a>
-            </div>
-            {% endif %}
-            <a href="{{ url_for('static.homepage') }}">{{ NAME }}</a>
-            {% if subpage_title %}
-            <span class="sep">•</span>
-            <span>
-              {% if subpage_url %}<a href="{{ subpage_url }}">{% endif %}
-                {{ subpage_title }}
-                {% if subpage_url %}</a>{% endif %}
-            </span>
-            {% endif %}
-            </a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dc-main-nav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-md-end" id="dc-main-nav">
-            <ul class="navbar-nav float-md-right">
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('tools.visualization') }}#visType=timeline" id="nav-timeline" class="nav-link-main "><span>Timeline</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('tools.visualization') }}#visType=scatter" id="nav-scatter" class="nav-link-main"><span>Scatter</span> </a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('tools.visualization') }}#visType=map" id="nav-map" class="nav-link-main "><span>Map</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('tools.download') }}" id="nav-download" class="nav-link-main "><span>Download</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('tools.stat_var') }}" id="nav-var" class="nav-link-main "><span>Variables</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('browser.browser_main') }}" id="nav-browser" class="nav-link-main "><span>Knowledge Graph</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="{{ url_for('explore.page') }}" id="nav-explorer" class="nav-link-main "><span>Search</span></a>
-                </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+<div id="metadata-base" class="d-none"
+  data-header="{{ HEADER_MENU }}"
+  data-footer="{{ FOOTER_MENU }}"
+  data-logo-path="{{ LOGO_PATH }}"
+  data-logo-width="{{ LOGO_WIDTH }}"
+  data-name="{{ NAME }}"
+  data-show-disaster="{{ SHOW_DISASTER }}"
+  data-show-sustainability="{{ SHOW_SUSTAINABILITY }}"
+  data-hide-header-search-bar="{{ is_hide_header_search_bar }}"
+  data-ga-value-search-source="{{ ga_value_search_source }}"
+  data-search-bar-hash-mode="{{ is_search_bar_hash_mode }}"
+  data-hide-full-footer="{{ is_hide_full_footer }}"
+  data-hide-sub-footer="{{ is_hide_sub_footer }}"
+  data-subfooter-extra="{{ subfooter_extra_content|safe }}"
+  data-brand-logo-light="{{ brand_logo_light }}"
+  data-locale="{{ locale }}"
+  data-sample-questions="{{ sample_questions }}"
+>
+</div>
 
-    <main id="{{ main_id }}" class="main-content">
-      {% block content %}
-      {% endblock %}
-    </main>
+{% include 'metadata/labels.html' %}
+{% include 'metadata/routes.html' %}
 
-    <footer id="main-footer">
-      <div class="container">
-      </div>
-    </footer>
-  </div>
-  {# Compile this down (or manually implement). Used only for nav bar so far #}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  {% block footer %}
-  {% endblock %}
+<script src={{url_for('static', filename='queryStore.js', t=config['VERSION'])}} async></script>
+<script src={{url_for('static', filename='base.js', t=config['VERSION'])}} async></script>
+
+<div id="main">
+  <header id="main-header">
+  </header>
+  <main id="{{ main_id }}" class="main-content">
+    {% block content %}
+    {% endblock %}
+  </main>
+  <footer id="main-footer"></footer>
+</div>
+
+{# Compile this down (or manually implement). Used only for nav bar so far #}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  crossorigin="anonymous"></script>
+{% block footer %}
+{% endblock %}
 </body>
 
 </html>
